deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: devrep
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devrep
  template:
    metadata:
      labels:
        app: devrep
    spec:
      containers:
      - name: devrep-front
        image: <FRONT_CONTAINER_NAME>
        ports:
        - containerPort: 80
      - name: devrep-back
        image: <BACK_CONTAINER_NAME>
        ports:
          - containerPort: 8080
      - name: db
        image: postgres
        ports:
          - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: devrep-service-db
spec:
  selector:
    app: devrep-front
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
---
---
apiVersion: v1
kind: Service
metadata:
  name: devrep-service-front
spec:
  selector:
    app: devrep-front
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: devrep-service-back
spec:
  selector:
    app: devrep-back
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: devrep-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: <DOMAIN>
    http:
      paths:
      - path: /
        backend:
          serviceName: devrep-service-front
          servicePort: 80
  - host: <APIDOMAIN>
    http:
      paths:
      - path: /
        backend:
          serviceName: devrep-service-back
          servicePort: 80
